// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngineForm with error renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <GeneralInformationsSettings
    engine={null}
    handleChange={[Function]}
  />
  <VisualSettings
    engine={null}
    handleChange={[Function]}
  />
  <SearchCriteriaSettings
    engine={null}
    handleChange={[Function]}
  />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="error"
    >
      ERROR
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`EngineForm with success renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <GeneralInformationsSettings
    engine={null}
    handleChange={[Function]}
  />
  <VisualSettings
    engine={null}
    handleChange={[Function]}
  />
  <SearchCriteriaSettings
    engine={null}
    handleChange={[Function]}
  />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="success"
    >
      Le moteur de recherche a bien été enregistré
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`EngineForm without Snackbar renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <GeneralInformationsSettings
    engine={null}
    handleChange={[Function]}
  />
  <VisualSettings
    engine={null}
    handleChange={[Function]}
  />
  <SearchCriteriaSettings
    engine={null}
    handleChange={[Function]}
  />
</WithStyles(ForwardRef(Grid))>
`;
